# ch-geminicli2api

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  test_heartbeat_visualization.py  test_non_streaming.py
.github/workflows/: docker_image.yml
src/: auth.py  config.py  google_api_client.py  main.py  openai_routes.py  openai_transformers.py  utils.py
test/: test_auth.py  test_coexistence.py  test_concurrent_heartbeats.py  test_config.py  test_google_api_client.py  test_integration.py  test_pseudo_streaming.py  test_pseudo_streaming_debug.py  test_pseudo_streaming_encoding.py  test_pseudo_streaming_fixed.py  test_pseudo_streaming_integration.py  test_pseudo_streaming_simple.py  test_streaming_logic.py
