[project]
name = "geminicli2api"
version = "0.1.0"
description = "Gemini CLI to API proxy"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "python-dotenv",
    "google-auth-oauthlib",
    "pydantic",
    "httpx",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-v",
]
markers = [
    "asyncio: marks tests as async",
]

[dependency-groups]
test = [
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]
